@@ -1,3 +1,8 @@
+2004-03-07  Dodji Seketeli  <dodji@gnome.org>
+
+	* src/cr-rgb.[ch]:
+	(cr_rgb_compute_from_percentage): added this new convenience 
+	function.
 2004-03-06  Dodji  <dodji@gnome.org>
 
 	* src/cr-tknzr.c: 
